--- a/src/components/green/green.css
+++ b/src/components/green/green.css
@@ -1,6 +1,7 @@
 div.green{
     background-color: lime;
-    height: 5rem;
+    height: 3rem;
     border-radius: 1rem;
     margin: 2rem 6rem;
+    padding: 2rem;
 }
