--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,5 @@
 div.header{
-    background-color: green;
+    background-color: lime;
     margin: 2rem 5rem;
     border-radius: 1rem;
     height: 3rem;
