--- a/src/components/body/content/content.css
+++ b/src/components/body/content/content.css
@@ -1,8 +1,10 @@
 div.content{
     margin: 1rem 5rem auto 1rem;
-    background-color: red;
+    background-color: rgb(235, 0, 51);
     border-radius: 1rem;
     height: 30rem;
     width: 43%;
     flex: 4;
+    
+    box-shadow: 0px 5px 15px 1px rgb(204, 204, 204);
 }
