--- a/src/components/body/sidebar/sidebar.css
+++ b/src/components/body/sidebar/sidebar.css
@@ -1,8 +1,10 @@
 div.sidebar{
     margin: 1rem 1rem auto 5rem;
-    background-color: violet;
+    background-color: rgb(209, 0, 209);
     border-radius: 1rem;
     height: 30rem;
     width: 43%;
     flex: 1;
+
+    box-shadow: 0px 5px 15px 1px rgb(204, 204, 204);
 }
