--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,7 +1,14 @@
 div.header{
-    background-color: lime;
-    margin: 2rem 5rem;
+    background-color: rgb(0, 192, 0);
+    margin: 2rem 5rem 0 5rem;
     border-radius: 1rem;
-    height: 3rem;
+    height: 1rem;
     padding: 2rem;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+
+    box-shadow: 0px 5px 15px 1px rgb(204, 204, 204);
 }
