--- a/src/components/body/sidebar/sidebar.css
+++ b/src/components/body/sidebar/sidebar.css
@@ -3,7 +3,7 @@ div.sidebar{
     background-color: rgb(209, 0, 209);
     border-radius: 1rem;
     height: 30rem;
-    width: 43%;
+    padding: 2rem;
     flex: 1;
 
     box-shadow: 0px 5px 15px 1px rgb(204, 204, 204);
