--- a/src/components/shopping-cards/product-card/product-card.scss
+++ b/src/components/shopping-cards/product-card/product-card.scss
@@ -13,6 +13,15 @@
         border-radius: 0.5rem;
     }
 
+    .rate, .price{
+        color: rgb(101, 163, 0);
+    }
+
+    .price{
+        font-weight: 600;
+        font-size: 1.2rem;
+    }
+
     .body{
     text-align: center;
     }
